# PET

./: .cursorignore  .gitignore  AGENTS.md  STATUS.md  run-backend.bat
backend/: alembic.ini  pyproject.toml  requirements.txt  run-server.bat  uvicorn-err.txt
backend/alembic/: env.py
backend/alembic/versions/: 8d856960641d_initial.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/debug/: __init__.py  logger.py  middleware.py  router.py
backend/app/engine/: builder.py  patterns.py  scanner.py  tokenizer.py  variables.py
backend/app/engine/providers/: base.py  google.py  ollama.py  openai.py  openrouter.py  registry.py
backend/app/models/: __init__.py  base.py  file.py  project.py  prompt.py  prompt_run.py  prompt_template.py  session.py  user.py  workspace.py
backend/app/routers/: __init__.py  analytics.py  execution.py  files.py  optimizer.py  patterns.py  projects.py  prompts.py  providers.py  rag.py  scanner.py  search.py  sessions.py  templates.py  tokenize.py  workspaces.py
backend/app/schemas/: __init__.py  execution.py  file.py  project.py  prompt.py  prompt_run.py  prompt_template.py  session.py  user.py  workspace.py
backend/app/services/: __init__.py  crud.py  project.py  prompt.py  prompt_template.py  session.py  workspace.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_openrouter_provider.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: debug-panel.tsx  debug-wrapper.tsx  header.tsx
frontend/src/lib/: api.ts
(+7 files in other folders)
